--- a/source/pug/includes/page-home_resultados.pug
+++ b/source/pug/includes/page-home_resultados.pug
@@ -3,16 +3,24 @@ h2  Resultados de <br>aprendizaje
 
 .card.resultado-item
     .card-body       
-        li Reconocer el modelo organizacional según criterios técnicos.
+        ul.bg-color-dark.mb-0
+            li.mb-0
+                span  Reconocer el modelo organizacional según criterios técnicos.
 .card.resultado-item
     .card-body  
-        li Establecer un modelo organizacional teniendo en cuenta necesidades del entorno y parámetros técnicos.
+        ul.bg-color-dark.mb-0
+            li.mb-0
+                span Establecer un modelo organizacional teniendo en cuenta necesidades del entorno y parámetros técnicos.
 .card.resultado-item
     .card-body  
-        li Verificar el proceso de implementación del modelo organizacional de acuerdo con parámetros definidos.
+        ul.bg-color-dark.mb-0
+            li.mb-0
+                span erificar el proceso de implementación del modelo organizacional de acuerdo con parámetros definidos.
 .card.resultado-item
     .card-body  
-        li Ajustar plan de implementación del modelo de desarrollo organizacional cumpliendo parámetros técnicos.
+        ul.bg-color-dark.mb-0
+            li.mb-0
+                span Ajustar plan de implementación del modelo de desarrollo organizacional cumpliendo parámetros técnicos.
         
 
 
