--- a/source/pug/pages/tema-2.pug
+++ b/source/pug/pages/tema-2.pug
@@ -15,7 +15,7 @@
               .card__figure
                 img(src="assets/images/pages/tema_2/icon_2_01.svg", alt="", style="width:100px")
               .card__copy                 
-                p.mb-0 #[strong La Ley 1876 de diciembre 27 de 2017 Sistema Nacional de Innovación Agropecuaria] se crea con el fin de dar respuesta al primer punto del acuerdo de paz y derogar la Ley 607 de 2000 que creó las Unidad Municipal de Asistencia Técnica Agropecuaria (UMATA) y reglamentó la asistencia técnica directa rural; en esta normativa se establecen los criterios para la creación, articulación y puesta en marcha de tres subsistemas, además, de su respectiva reglamentación mediante decretos, resoluciones y ordenanzas.
+                p.mb-0 #[strong La Ley 1876 de diciembre 27 de 2017 Sistema Nacional de Innovación Agropecuaria] se crea con el fin de dar respuesta al primer punto del acuerdo de paz y derogar la Ley 607 de 2000 que creó la Unidad Municipal de Asistencia Técnica Agropecuaria (UMATA) y reglamentó la asistencia técnica directa rural; en esta normativa se establecen los criterios para la creación, articulación y puesta en marcha de tres subsistemas, además, de su respectiva reglamentación mediante decretos, resoluciones y ordenanzas.
         .col-12 
           p.mb-0 A continuación se brindará una explicación breve de la #[strong jerarquía de las normas, la aplicación de la Ley 1876 de 2017 (SNIA) y normas reglamentarias para la formulación de proyectos agropecuarios].      
         
@@ -157,7 +157,7 @@
           p.mb-2 #[strong Participación de los actores en la formulación del PDEA] 
           p.mb-4 En la etapa de formulación participan los municipios y distritos, realizando el fortalecimiento de los Consejos Municipales de Desarrollo Rural (CMDR) que son los espacios de diálogo y concertación de las necesidades e iniciativas en materia de extensión agropecuaria; entre los actores que deben tener representación están las comunidades étnicas, las mujeres, los jóvenes y cualquier otra población.
           p.mb-2 #[strong Formulación cuatrienal del PDEA] 
-          p Solo se debe formular para un periodo nomayor de cuatro años en los cuales las entidades prestadores del servicio de extensión agropecuaria prestarán el servicio a partir de las orientaciones del PDEA.
+          p Solo se debe formular para un periodo no mayor de cuatro años en los cuales las entidades prestadoras del servicio de extensión agropecuaria prestarán el servicio a partir de las orientaciones del PDEA.
 
       .row 
         .col-12 
@@ -468,7 +468,7 @@
 
       .row.mb-5
         .col-12
-          p En esta norma se encuentran los #[strong criterios para la caracterización e identificación de la población], como que su actividad económica predominante sea la agropecuaria, uso de mano de obra familiar o comunitaria, la #[strong Unidad Agrícola Familar (UAF)] no debe ser mayor a uno (1) y residir o vivir dentro del perímetro funcional de la finca, o territorio colectivo del cual se derivan sus medios de vida.        
+          p En esta norma se encuentran los #[strong criterios para la caracterización e identificación de la población], como que su actividad económica predominante sea la agropecuaria, uso de mano de obra familiar o comunitaria, la #[strong Unidad Agrícola Familiar (UAF)] no debe ser mayor a uno (1) y residir o vivir dentro del perímetro funcional de la finca, o territorio colectivo del cual se derivan sus medios de vida.        
           p.mb-0 El documento adjunto llamado #[strong lineamientos estratégicos de política pública para la agricultura campesina], familiar y comunitaria; es donde se direcciona la política de ACFC, en el marco conceptual, diagnóstico de la ACFC, teniendo como base los ejes estructurantes de los lineamientos de política pública ACFC de que trata el #[strong artículo 8 de la resolución 464 de 2017].
 
       .jumbotron(style="background-color:#FCFFD4;").mb-5
