Actualización Material descargable (material incompleto)

--- a/source/pug/includes/page-home_resultados.pug
+++ b/source/pug/includes/page-home_resultados.pug
@@ -15,7 +15,7 @@ h2  Resultados de <br>aprendizaje
     .card-body  
         ul.bg-color-dark.mb-0
             li.mb-0
-                span erificar el proceso de implementación del modelo organizacional de acuerdo con parámetros definidos.
+                span Verificar el proceso de implementación del modelo organizacional de acuerdo con parámetros definidos.
 .card.resultado-item
     .card-body  
         ul.bg-color-dark.mb-0
