--- a/source/pug/material.pug
+++ b/source/pug/material.pug
@@ -37,10 +37,12 @@ html(lang="es")
 
                                 ul.list-group.list-group-flush.list.my-n3.nav-temas
                                     +navTemaItem('play', 'Introducción', '#introduccion')
-                                    +navTemaItem('1', 'Normativa vigente proceso ECCL', '#tema-1')
-                                    +navTemaItem('question', 'Actividad didáctica', '#evaluacion')
+                                    +navTemaItem('1', 'Desarrollo rural y políticas agrarias en Colombia', '#tema-1')
+                                    +navTemaItem('2', 'Sistema Nacional de Innovación Agropecuaria (SNIA)', '#tema-2')
+                                    +navTemaItem('3', 'Diagnóstico rural participativo (DRP)', '#tema-3')
+                                    +navTemaItem('4', 'Clasificación y registro de usuarios del servicio público de extensión agropecuaria', '#tema-4')
                                     +navTemaItem('glosary', 'Glosario', '#glosario')
-                                    +navTemaItem('folder', 'Material complementario', '#anexos')
+                                    +navTemaItem('folder', 'Material complementario', '#material-complementario')
                                     +navTemaItem('references', 'Referencias bibliográficas', '#referencias')
 
 
@@ -48,9 +50,13 @@ html(lang="es")
             #introduccion
                 include pages/introduccion.pug
             #tema-1
-                include pages/1-tema.pug
-            #evaluacion
-                include pages/actividad-1.pug
+                include pages/tema-1.pug
+            #tema-2
+                include pages/tema-2.pug
+            #tema-3
+                include pages/tema-3.pug
+            #tema-4
+                include pages/tema-4.pug
             #glosario
                 include pages/glosario.pug
             #anexos
