--- a/source/pug/info.pug
+++ b/source/pug/info.pug
@@ -5,8 +5,8 @@ html(lang="es")
     head
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0")
-        title Información del programa: Salud Penitenciaria
-        meta(meta name="description" content="Ruta de aprendizaje programa Salud penitenciaria.")    
+        title Información del programa: Proyectos agropecuarios
+        meta(meta name="description" content="Ruta de aprendizaje programa Proyectos agropecuarios.")    
         link(rel="icon",type="image/svg+xml",href="assets/images/logos/senaLogo.svg")
         link(rel="stylesheet", href="assets/fonts/feather/feather.css")
         link(rel="stylesheet", href="assets/fonts/fontawesome/css/font-awesome.css")
@@ -31,31 +31,42 @@ html(lang="es")
 
                             .col-12.col-lg-6
 
-                                h3.curso-subtitulo Evaluador de competencias laborales en el área técnica de su dominio
+                                h3.curso-subtitulo Proyectos agropecuarios
                                 h1.curso-titulo Información del programa
 
                                 .brand-line-primary
 
                                 p.curso-descripcion
-                                    ul.bg-brand-color-dark.text-white 
+                                    ul.text-white 
                                         li 
-                                            span #[strong Nombre del programa:] Evaluador de competencias laborales en el área técnica de su dominio
+                                            span #[strong Nombre del programa:] Proyectos agropecuarios
                                         li 
-                                            span #[strong Código:] 11220137
+                                            span #[strong Código:] 733402
                                         li 
-                                            span #[strong Total Horas:] 48
+                                            span #[strong Total Horas:] 2208  
                                         li 
-                                            span #[strong Duración en semanas:] 5 semanas
+                                            span #[strong Duración:] 15 meses
                                         li 
                                             span #[strong Modalidad:] virtual
                                         li 
-                                            span #[strong Requisito de ingreso:] se requiere que el aprendiz sea experto en el área técnica de su dominio para desarrollar procesos de evaluación y certificación de Competencias Laborales en los Centros de Formación del Sena. Además, que el aprendiz tenga conocimiento, dominio y manejo en herramientas informáticas, buscadores de internet y de comunicación como correo electrónico, chat, entre otros. </i>.
+                                            span #[strong Requisito de ingreso:] 
+                                                ul
+                                                    li Nivel académico adecuado para caracterizar al aspirante de acuerdo con el perfil de egreso: Básico Secundaria, grado 9°. Requiere certificación académica.
+                                                    li No requiere formación para el trabajo y desarrollo humano.
+                                                    li Edad mínima definida por ley: 15 años.
+                                                    li No existe legislación que establezca restricciones de ingreso.
+                                                    li Aspectos actitudinales, motivacionales o de interés: Dinámico en el trabajo tanto en ambientes abiertos como cerrados, propositivo y de fácil adaptación a cambios tecnológicos. De fácil comunicación y con dotes de conciliador ante conflictos laborales. Receptivo ante las órdenes y nuevos direccionamientos de las empresas. Con gran capacidad de trabajo bajo presión.
+
+
+
+
+
 
                     
 
                             .col-12.col-lg-6
                                 .embed-responsive.embed-responsive-16by9
-                                    iframe.embed-responsive-item(width='560', height='315', src='https://www.youtube.com/embed/yAttOSxoYdc', frameborder='0', allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture', allowfullscreen='')          
+                                    iframe.embed-responsive-item(width='560', height='315', src='https://www.youtube.com/embed/I4GXonl7iVw', frameborder='0', allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture', allowfullscreen='')          
 
 
         section#Presentacion.section.section-dark
@@ -65,9 +76,9 @@ html(lang="es")
                 h1  1. Presentación
                 .brand-line-primary
 
-                p.mt-5 La evaluación de las competencias laborales es el proceso por medio del cual un evaluador en el área técnica de su dominio recoge evidencias de desempeño, producto y conocimiento de una persona, con el fin de determinar su nivel de competencia (básico, intermedio o avanzado) para desempeñar una función productiva, centrándose en el desempeño real de las personas y con base en un referente que es la Norma de Competencia Laboral.
+                p.mt-5 Colombia cuenta con un gran potencial productivo agropecuario; sin embargo, su fortalecimiento tanto a nivel regional como nacional, depende en gran medida de un recurso humano cualificado y calificado, capaz de responder integralmente a la dinámica del sector. En particular, el SENA ofrece a actores del sector rural el programa Técnico en proyectos agropecuarios, que se orienta hacia la identificación de problemas, la formulación de proyectos basados en las oportunidades, la oferta de apoyo institucional y las necesidades de las correspondientes unidades productivas, organizaciones y empresas rurales. A su vez, en el programa se estructuran elementos de formación profesional, social, tecnológica y cultural, impactando positivamente la productividad, la competitividad, la equidad y el desarrollo del país. 
 
-                p Este curso orienta al aprendiz a desarrollar actividades propias de la metodología establecida para el proceso de Evaluación y Certificación de Competencias Laborales, a partir de la #[strong normativa, ejecución y cierre de proyectos.]  
+
 
         section#Justificacion.section.section-light
 
@@ -77,32 +88,100 @@ html(lang="es")
                 .brand-line-primary
 
                 
-                p.mt-5 Por recomendación de la Organización Internacional del Trabajo, los países implementan el proceso de evaluación y certificación del talento humano, como el medio para reconocer y cualificar las competencias laborales a modo de estrategia de mejoramiento continuo, con el objetivo de atender los requerimientos del sector productivo. Para tal fin, en el año 2003 encargan al SENA como organismo certificador, quien pone en marcha estrategias y procedimientos que posibiliten la valoración de las competencias de los trabajadores, facilitando, a su vez, la definición de políticas inherentes a la gestión del talento humano.
- 
-                p En el contexto de las competencias laborales, la evaluación se constituye en el mecanismo que permite reconocer si un candidato posee una competencia en cuestión o cuál es el camino que debe seguir para alcanzar el estándar relacionado con ésta. En este marco, el SENA pone a disposición el programa de formación #[strong “Evaluador de competencias laborales en el área técnica de su dominio”], con el objetivo de proporcionar herramientas para aplicar en este proceso. Por tal razón, este programa de formación virtual se concibe dentro de los criterios de gestión de calidad.
+                p.mt-5 Históricamente el sector agropecuario ha jugado un papel importante en el desarrollo del país, aportando al incremento del Producto Interno Bruto (PIB), constituyéndose en un sector de  potencial crecimiento, además de ser apalancado por una población de suma relevancia para el tejido social de nuestra nación. A pesar de este crecimiento, en las últimas décadas las dificultades en materia de productividad agrícola, acceso a mercados y estándares de calidad, entre otros factores sociopolíticos y económicos han afectado negativamente el desempeño sectorial.
+
+                p De acuerdo con el último Censo Nacional de Población y Vivienda realizado por el DANE en el año 2018, el 15,8% de la población en Colombia habita la zona rural y el 7,1% se ubica en centros poblados, lo que representa un 23,9% de la población del país con vocación agropecuaria, con relación al Tercer Censo Nacional Agropecuario realizado en el año 2014. 
+
+                p En lo que concierne al área de uso agrícola (8,5 millones de hectáreas), el 83,9% corresponde a cultivos (7,1 millones de hectáreas); el 13,6% está asignado para áreas en descanso y, el 2,5% para áreas en barbecho. En el país existen 2.370.099 Unidades de Producción Agropecuaria (UPA), que producen bienes agrícolas, forestales, pecuarios, acuícolas y/o adelantan la captura de peces destinados al consumo continuo y/o a la venta. 
+
+                p Entonces, Colombia es un país con un gran potencial agropecuario; sin embargo, la carencia de formación de la población que habita en las zonas rurales (como se reflejó en el Tercer Censo Nacional Agropecuario, en el cual el 54% de las personas mayores a 24 años solo tienen estudios de  primaria, el 12% alcanzó la básica secundaria, el 10% la educación media y solo el 5% de esta población posee un título como técnico, tecnólogo o profesional y, el 19% de la población no cuenta con ningún tipo de formación) genera que las actividades productivas desarrolladas sean susceptibles de importantes mejoras de calidad. 
+
+                p El programa de formación profesional Técnico en proyectos agropecuarios se ha creado para brindar al sector rural la posibilidad de incorporar personal con altas calidades laborales y profesionales que contribuyan al desarrollo económico, social y tecnológico de su entorno, así como capacitar a los aprendices en la formulación de proyectos agropecuarios que dinamicen e impacten positivamente la ruralidad productiva colombiana. 
+
+                p Por esta razón, el SENA ofrece el programa con todos los elementos de formación profesional, social, tecnológica y cultural. Además, cuenta con metodologías de aprendizaje innovadoras y acceso a tecnologías de última generación, lo que potencia la formación de ciudadanos de libre pensamiento, con capacidad crítica, solidarios y emprendedores. 
+
+                p Con el programa Técnico en proyectos agropecuarios se pretende dar cobertura en todo el país con el propósito de fortalecer las Unidades de Producción Agropecuaria, teniendo en cuenta el marco legal y normativo colombiano. De esta forma, mejorando las condiciones socioeconómicas de la población, generando mayores oportunidades de productividad, competitividad, empleabilidad y emprendimiento, se apunta al desarrollo del campo como motor de la economía rural.
+
+
+
+
 
 
         section#Poblacion.section.section-dark
 
             .container
 
-                h1  3. Población <br>objetivo
+                h1  3.	Competencias a  <br>desarrollar
                 .brand-line-primary
 
-                p Este programa está dirigido a evaluadores internos y externos, expertos en el área técnica de su dominio, para desarrollar procesos de Evaluación y Certificación de Competencias Laborales en los centros de formación del SENA.
+
+                ul
+                    li Coordinar actividades de acuerdo con estrategias de gestión y proceso administrativo.
+                    li Formular el proyecto de acuerdo con métodos y técnicas de investigación.
+                    li Enfocar el desarrollo organizacional según criterios estratégicos.
+                    li Aplicación de conocimientos de las ciencias naturales de acuerdo con situaciones del contexto productivo y social.
+                    li Utilizar herramientas informáticas de acuerdo con las necesidades de manejo de información.
+                    li Interactuar en lengua inglesa de forma oral y escrita dentro de contextos sociales y laborales según los criterios establecidos por el marco común europeo de referencia para las lenguas.
+                    li Razonar cuantitativamente frente a situaciones susceptibles de ser abordadas de manera matemática en contextos laborales, sociales y personales.
+                    li Desarrollar procesos de comunicación eficaces y efectivos, teniendo en cuenta situaciones de orden social, personal y productivo.
+                    li Aplicar prácticas de protección ambiental, seguridad y salud en el trabajo de acuerdo con las políticas organizacionales y la normatividad vigente.
+                    li Ejercer derechos fundamentales del trabajo en el marco de la constitución política y los convenios internacionales.
+                    li Interactuar en el contexto productivo y social de acuerdo con principios éticos para la construcción de una cultura de paz.
+                    li Generar hábitos saludables de vida mediante la aplicación de programas de actividad física en los contextos productivos y sociales.
+                    li Gestionar procesos propios de la cultura emprendedora y empresarial de acuerdo con el perfil personal y los requerimientos de los contextos productivo y social.
+
+
+
+
+
+
+        section#Poblacion.section.section-light
+
+            .container
+
+                h1  4.	Perfil de <br>ingreso
+                .brand-line-primary
+
+
+                ul
+                    li Nivel académico adecuado para caracterizar al aspirante de acuerdo con el perfil de egreso: Básico Secundaria, grado 9°. Requiere certificación académica.
+                    li No requiere formación para el trabajo y desarrollo humano.
+                    li Edad mínima definida por ley: 15 años.
+                    li No existe legislación que establezca restricciones de ingreso.
+                    li Aspectos actitudinales, motivacionales o de interés: Dinámico en el trabajo tanto en ambientes abiertos como cerrados, propositivo y de fácil adaptación a cambios tecnológicos. De fácil comunicación y con dotes de conciliador ante conflictos laborales. Receptivo ante las órdenes y nuevos direccionamientos de las empresas. Con gran capacidad de trabajo bajo presión.
+
+
+
+
+
+        section#Poblacion.section.section-dark
+
+            .container
+
+                h1  5.	Perfil de <br>egreso
+                .brand-line-primary
+
+                
+                p.mt-5 El egresado(a) del programa de formación técnico en proyectos agropecuarios es una persona con capacidad de participar en la formulación de proyectos agropecuarios en empresas agropecuarias, granjas agropecuarias, fincas. Realizar actividades de apoyo en programas de asistencia técnica y extensionismo agropecuario enmarcadas en la creación del sistema nacional de innovación agropecuaria ley 1876 de 2017 que permitan a los productores agropecuarios optimizar su actividad productiva para aprovechar las oportunidades de mercado. Podrá desempeñarse en orientación para la formulación de proyectos agropecuarios con participación comunitaria en asociaciones, cultivadores, tendrá motivación hacia el emprendimiento y creación de empresas prestadoras de servicios de información y apoyo para la formulación de proyectos.
+
+                p En general el programa habilita al egresado para participar en la formulación de proyectos agropecuarios a partir del análisis de la información productiva, social y empresarial, fomentando la cultura organizacional regional y local, en un marco de preservación del ambiente, la vida y los derechos humanos.
+
+
+            
+
 
 
         section#Estrategia.section.section-light
 
             .container
 
-                h1 4. Estrategia <br>metodológica
+                h1 6. Estrategia <br>metodológica
                 .brand-line-primary
 
-                p Centrada en la construcción de autonomía para garantizar la calidad de la formación en el marco de la formación por competencias, el aprendizaje por proyectos y el uso de técnicas didácticas activas que estimulan el pensamiento para la resolución de problemas simulados y reales; soportadas en el utilización de las Tecnologías de la Información y la Comunicación (TIC), integradas en ambientes virtuales de aprendizaje que recrean el contexto productivo y vinculan al aprendiz con la realidad cotidiana y el desarrollo de las competencias. 
+                p Centrada en la construcción de autonomía para garantizar la calidad de la formación en el marco de la formación por competencias, el aprendizaje por proyectos y el uso de técnicas didácticas activas que estimulan el pensamiento para la resolución de problemas simulados y reales; soportadas en la utilización de las Tecnologías de la Información y la Comunicación (TIC), integradas en ambientes abiertos y pluritecnológicos, que en todo caso recrean el contexto productivo y vinculan al aprendiz con la realidad cotidiana y el desarrollo de las competencias.
 
+                p Igualmente, debe estimular de manera permanente la autocrítica y la reflexión del aprendiz sobre el quehacer y los resultados de aprendizaje, que logra a través de la vinculación activa de las cuatro fuentes de información para la construcción de conocimiento:
 
-                p Igualmente, debe estimular de manera  permanente la autocrítica y la reflexión del aprendiz sobre el que hacer y los resultados de aprendizaje que logra a través de la  vinculación  activa  de las cuatro fuentes de información para la construcción de conocimiento: 
 
                 .row.mt-4
                     article.col-md-6.col-lg-3.my-2
