--- a/source/pug/pages/tema-1.pug
+++ b/source/pug/pages/tema-1.pug
@@ -280,7 +280,7 @@
         .pill(style="padding:2rem; background-color:white; border-radius:10px;").mb-5
           .row.mb-3 
             .col-12 
-              h2(style="color:#00838F") Décimo período
+              h2(style="color:#00838F") Decimo período
 
           .row.mb-4 
             .col-12 
